Post, Community, and User search results in correct place, just need proper spacing & more styling

--- a/react-app/src/components/SearchResults/SearchResultsPage.css
+++ b/react-app/src/components/SearchResults/SearchResultsPage.css
@@ -14,9 +14,35 @@
     margin-right: 16px;
 }
 
+.post-results-ul {
+    list-style: none;
+    margin-top: 52px;
+}
+.user-results-ul {
+    list-style: none;
+    margin-top: 52px;
+}
 .community-results-ul {
     list-style: none;
     margin-top: 52px;
+}
+
+.post-result-li {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: flex-start;
+    margin: 16px;
+    height: auto;
+    width: 624px;
+    border: 1px solid #ccc;
+    padding: 8px;
+    font-size: 14px;
+    font-family: 'IMB Plex Sans', Arial, sans-serif;
+    color: #1A1A1B;
+    line-height: 18px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
 }
 
 .community-result-li {
@@ -26,7 +52,25 @@
     align-items: flex-start;
     margin: 16px;
     height: auto;
-    width: 624px;
+    width: 310px;
+    border: 1px solid #ccc;
+    padding: 8px;
+    font-size: 14px;
+    font-family: 'IMB Plex Sans', Arial, sans-serif;
+    color: #1A1A1B;
+    line-height: 18px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+}
+
+.user-result-li {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: flex-start;
+    margin: 16px;
+    height: auto;
+    width: 310px;
     border: 1px solid #ccc;
     padding: 8px;
     font-size: 14px;
